--- a/back-end/.env
+++ b/back-end/.env
@@ -1,15 +1,21 @@
 # =========================
-# Application
+# APP
 # =========================
-APP_NAME="Ticketing Backend"
+APP_NAME=Ticketing Backend
 ENV=development
 
-
 # =========================
-# Database - MySQL
+# DATABASE (MySQL)
 # =========================
 DB_HOST=localhost
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=
+DB_USER=appuser
+DB_PASSWORD=app_password
 DB_NAME=ticketing_db
+
+# =========================
+# SECURITY
+# =========================
+SECRET_KEY=tcxii-team6-backend-secret
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_DAYS=7
